payload/core/k10/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kasten-io
  labels:
    name: kasten-io
